@@ -8,6 +8,8 @@ changes relative to sbcl-1.3.12:
   * optimization: faster TYPEP on undefined at compile-time types and upcoming
     class definitions. (lp#1082967)
   * bug fix: get-timezone returns corret DST on 64-bit Windows. (lp#1641058)
+  * bug fix: cross reference information in fasls is no longer incompatible
+    between different cores (lp#1648186)
 
 changes in sbcl-1.3.12 relative to sbcl-1.3.11:
   * enhancement: on x86-64, compiled functions loaded from fasl files
